<resources>
    <string name="app_name">MCDOne</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_add_medicine">Add Medicine &amp; Condition</string>
    <string name="nav_remove_medicine">Remove Medicine &amp; Condition</string>
    <string name="nav_show">Show Medicine &amp; Condition</string>
    <string name="nav_status">Status</string>
    <string name="nav_sync">Sync Data</string>
    <string name="nav_delete_account">Delete Account</string>
    <string name="nav_logout">Log Out</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_scanner">ImageScannerActivity</string>
    <string name="title_activity_add_medicine_text">AddMedicineTextActivity</string>
    <string name="title_activity_show_medicine_list">ShowMedicineListActivity</string>
    <string name="title_activity_show_clash_report">ShowClashReportActivity</string>
    <string name="title_activity_remove_medicine">RemoveMedicineActivity</string>


    <string name="facebook_application_id" translatable="false">507634609721748</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb507634609721748</string>
    <string name="title_activity_add_health_condition">AddHealthConditionActivity</string>
    <string name="title_activity_sync_data">SyncDataActivity</string>
    <string name="title_activity_remove_condition">RemoveConditionActivity</string>

</resources>
