<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_edit_profile"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/nav_edit_profile" />
    <item
        android:id="@+id/nav_add_medicine"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/nav_add_medicine" />
    <item
        android:id="@+id/nav_remove_medicine"
        android:icon="@drawable/ic_remove_circle_black_24dp"
        android:title="@string/nav_remove_medicine" />
    <item
        android:id="@+id/nav_show_medicine"
        android:icon="@drawable/ic_airplay_black_24dp"
        android:title="@string/nav_show" />
    <item
        android:id="@+id/nav_status"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/nav_status" />
    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/nav_sync" />
    <item
        android:id="@+id/nav_delete_account"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/nav_delete_account" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_keyboard_return_black_24dp"
        android:title="@string/nav_logout" />

</menu>
